-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1, 10.0
-
Component/s: Scripts & Clients
-
Labels:None
-
Sprint:10.2.0-3
Many MTR tests restart the server in the middle either using shutdown_server [$timeout] directly, or using include files such as include/restart_mysqld.inc, which in turn call shutdown_server.
shutdown_server command is handled by do_shutdown_server, which is supposed to keep checking whether the server is gone away, and proceed as soon as it's disappeared. Only on Windows it does not work – even though the server shuts down properly, mysqltest keeps waiting until the timeout is exceeded. As a result, tests which restart the server in the middle take much longer than they are supposed to.
One of examples is innodb.innodb-autoinc. It takes 5 times longer on Windows because it waits three times, each time for 60 seconds.